examples/type_system/failing/89_adt_generic_constructor_hm_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/89_adt_generic_constructor_hm_mismatch.flx
// error[E430]: Any Type Inferred
//
// Core definition `5` has an unresolved type variable (var #N) in its HM-inferred result type at the backend representation. The static typing contract requires every Core-visible boundary to be concrete before backend lowering.
//
//   examples/type_system/failing/89_adt_generic_constructor_hm_mismatch.flx:46:1
//    |
// 46 | let bad: Result<Int, String> = Ok("oops")
//    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//
// Hint:
//   Add a type annotation or adjust the definition so inference fully resolves its result type.
//
//
// error[E300]: Annotation Type Mismatch
//
// The value of `bad` does not match its type annotation.
//
//   examples/type_system/failing/89_adt_generic_constructor_hm_mismatch.flx:46:32
//    |
// 46 | let bad: Result<Int, String> = Ok("oops")
//    |                                ^^^^^^^^^^
//    |                                ---------- this value has type `Result<String, _>`
//
//    |          ------------------- but `bad` was annotated as `Result<Int, String>`
//
// Note:
//   annotated type: Result<Int, String>
//   value type: Result<String, _>
//
// Help:
//   Change `bad` to a `Result<Int, String>` value or update the annotation.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300
// expect-error: E430

// E300: generic ADT constructor field type mismatch under instantiated annotation.
type Result<T, E> = Ok(T) | Err(E)

let bad: Result<Int, String> = Ok("oops")
